--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,15 @@
+# idea
+.idea
+
 # Binaries for programs and plugins
 *.exe
 *.exe~
 *.dll
 *.so
 *.dylib
+cli
+MySrv
+WebSrv
 
 # Test binary, built with `go test -c`
 *.test
