--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,7 @@ WebSrv
 
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
+/output
 
 # Dependency directories (remove the comment below to include it)
 # vendor/
